# mikufetch

./: .buildinfo  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  genindex.html  index.html  make.bat  mikufetch.html  mikufetch.py  mikufetch.rst  modules.html  modules.rst  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.github/workflows/: cross-platform-test.yml  python.yml
_autosummary/: mikufetch.art.html  mikufetch.cli.html  mikufetch.html  mikufetch.info.html
_sources/: index.rst.txt  usage.rst.txt
_sources/_autosummary/: mikufetch.art.rst.txt  mikufetch.cli.rst.txt  mikufetch.info.rst.txt  mikufetch.rst.txt
docs/: conf.py  mikufetch.rst  modules.rst  usage.rst
docs/_autosummary/: mikufetch.info.rst
mikufetch/: __init__.py  __main__.py  art.py  cli.py  info.py
tests/: tests_cli.py  tests_info.py
