[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mikufetch"
version = "1.3.2"
description = "Cute cross-platform system info fetcher with Miku ASCII art"
authors = [{name = "yogurtmenn"}]
readme = "README.md"
license = {text="MIT"}
requires-python = ">=3.10"
dependencies = []
keywords = ["neofetch", "system", "cli", "ascii", "miku", "windows", "linux", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/yogurtmenn/mikufetch"
Repository = "https://github.com/yogurtmenn/mikufetch"
Issues = "https://github.com/yogurtmenn/mikufetch/issues"

[project.scripts]
mikufetch = "mikufetch.cli:main"

[tool.setuptools]
packages = ["mikufetch"]
include-package-data = true